--- a/nmct.ba.cashlessproject.ui.management/View/ChangePassword.xaml
+++ b/nmct.ba.cashlessproject.ui.management/View/ChangePassword.xaml
@@ -45,6 +45,6 @@
 
         <Button Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="3" Content="Wijzigingen opslaan" Command="{Binding ChangePasswordCommand}"/>
 
-        <TextBlock Grid.Row="4" Grid.ColumnSpan="6" Foreground="red" Text="{Binding ErrorSuccesfull}" />
+        <TextBlock Grid.Row="4" Grid.ColumnSpan="6" Style="{StaticResource Melding}" Text="{Binding ErrorSuccesfull}" />
     </Grid>
 </UserControl>
