--- a/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Create.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model nmct.ba.cashlessproject.model.Organisation
 
 @{
-    ViewBag.Title = "Nieuw";
+    ViewBag.Title = "Nieuwe vereniging";
 }
 
 <h2>Nieuwe vereniging toevoegen</h2>
