--- a/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Delete.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model nmct.ba.cashlessproject.model.Organisation
 
 @{
-    ViewBag.Title = "Verwijder";
+    ViewBag.Title = "Verwijder vereniging";
 }
 
 <h2>Delete</h2>
