--- a/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Details.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model nmct.ba.cashlessproject.model.Organisation
 
 @{
-    ViewBag.Title = "Detail";
+    ViewBag.Title = "Detail vereniging";
 }
 
 <h2>Detail vereniging</h2>
