--- a/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Edit.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model nmct.ba.cashlessproject.model.Organisation
 
 @{
-    ViewBag.Title = "Bewerk";
+    ViewBag.Title = "Bewerk vereniging";
 }
 
 <h2>Vereniging bewerken</h2>
