--- a/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Index.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<nmct.ba.cashlessproject.model.Organisation>
 
 @{
-    ViewBag.Title = "Beheer organisaties";
+    ViewBag.Title = "Beheer verenigingen";
 }
 
-<h2>Beheer organisaties</h2>
+<h2>Beheer verenigingen</h2>
 
 <p>
-    @Html.ActionLink("Voeg nieuwe organisatie toe", "Create")
+    @Html.ActionLink("Voeg nieuwe vereniging toe", "Create")
 </p>
 <table class="table">
     <tr>
