--- a/nmct.ssa.cashlessproject.itcompany/Views/Register/Create.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Register/Create.cshtml
@@ -2,7 +2,7 @@
 @Styles.Render("~/Content/datepicker.css")
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Nieuw register";
 }
 
 <h2>Nieuw register toevoegen</h2>
