--- a/nmct.ssa.cashlessproject.itcompany/Views/Register/Edit.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Register/Edit.cshtml
@@ -2,10 +2,10 @@
 @Styles.Render("~/Content/datepicker.css")
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Wijzig vereniging";
 }
 
-<h2>Bewerk register @Model.Register.RegisterName (@Model.Register.Device)</h2>
+<h2>Wijzig vereniging van register @Model.Register.RegisterName (@Model.Register.Device)</h2>
 
 
 @using (Html.BeginForm())
