--- a/nmct.ba.cashlessproject.ui.management/View/Product.xaml
+++ b/nmct.ba.cashlessproject.ui.management/View/Product.xaml
@@ -57,7 +57,7 @@
 
         <TextBlock Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Text="Prijs"/>
         <TextBox Grid.Row="2" Grid.Column="6" Grid.ColumnSpan="3" MaxLength="6" Text="{Binding SelectedProduct.Price, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, StringFormat=C, ConverterCulture=nl-BE}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}"/>
-        
-        <TextBlock Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="6" Text="{Binding Error}" Foreground="red" />
+
+        <TextBlock Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="6" Style="{StaticResource Melding}" Text="{Binding Error}" />
     </Grid>
 </UserControl>
