--- a/nmct.ssa.cashlessproject.itcompany/Views/ErrorLog/Index.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/ErrorLog/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<nmct.ba.cashlessproject.model.ErrorLog>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Overzicht error logs";
 }
 
-<h2>Alle error logs</h2>
+<h2>Overzicht error logs</h2>
 
 @*<p>
     @Html.ActionLink("Create New", "Create")
