--- a/nmct.ba.cashlessproject.ui.management/View/Login.xaml
+++ b/nmct.ba.cashlessproject.ui.management/View/Login.xaml
@@ -30,7 +30,7 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="6" Style="{StaticResource TitelStart}" Text="Welkom, gelieve u aan te melden om door te gaan naar het management systeem"/>
+        <TextBlock Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="6" Style="{StaticResource TitelStart}" Text="Welkom! Gelieve u aan te melden om door te gaan naar het management systeem"/>
         <TextBlock Grid.Column="3" Grid.Row="2" Text="Login:"/>
         <TextBox Grid.Column="6" Grid.ColumnSpan="3" Grid.Row="2" Text="{Binding Username}"/>
         <TextBlock Grid.Column="3" Grid.Row="3" Text="Password:"/>
