--- a/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Index.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Index.cshtml
@@ -90,8 +90,8 @@
         </td>-->
         <td>
             @Html.ActionLink("Bewerk", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Detail", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Verwijder", "Delete", new { id=item.ID })
+            @Html.ActionLink("Detail", "Details", new { id=item.ID }) @*|
+            @Html.ActionLink("Verwijder", "Delete", new { id=item.ID })*@
         </td>
     </tr>
 }
