--- a/nmct.ssa.cashlessproject.itcompany/Views/Home/Index.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Management verenigingen</h1>
-    <p class="lead">Welkom in het administratief gedeelte van het IT-bedrijf. Gelieve in te loggen en je keuze te maken in het menu.</p>
+    <p class="lead">Welkom in het administratief gedeelte van het IT-bedrijf. Gelieve in te loggen en/of je keuze te maken in het menu.</p>
     <!--<p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>-->
 </div>
 
