--- a/nmct.ssa.cashlessproject.itcompany/Views/Shared/_Layout.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
-                    <li>@Html.ActionLink("Beheer organisaties", "Index", "Organisation")</li>
+                    <li>@Html.ActionLink("Beheer verenigingen", "Index", "Organisation")</li>
                     <li>@Html.ActionLink("Beheer kassa's", "Index", "Register")</li>
                     <li>@Html.ActionLink("Overzicht error logs", "Index", "ErrorLog")</li>
                 </ul>
