--- a/nmct.ba.cashlessproject.ui.management/View/Employee.xaml
+++ b/nmct.ba.cashlessproject.ui.management/View/Employee.xaml
@@ -58,21 +58,21 @@
         <TextBox Grid.Row="1" Grid.Column="6" Grid.ColumnSpan="3" MaxLength="30" Text="{Binding SelectedEmployee.Firstname, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}"/>
         <TextBox Grid.Row="1" Grid.Column="9" Grid.ColumnSpan="3" MaxLength="30" Text="{Binding SelectedEmployee.Lastname, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}"/>
 
-        <TextBlock Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Text="Pincode"/>
+        <TextBlock Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Text="Pincode:"/>
         <TextBox Grid.Row="2" Grid.Column="6" Grid.ColumnSpan="3" MaxLength="4" Text="{Binding SelectedEmployee.Pincode, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}"/>
 
-        <TextBlock Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" Text="Straat + nr"/>
+        <TextBlock Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" Text="Straat + nr:"/>
         <TextBox Grid.Row="3" Grid.Column="6" Grid.ColumnSpan="3" MaxLength="50" Text="{Binding SelectedEmployee.Street, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}"/>
         <TextBox Grid.Row="3" Grid.Column="9" Grid.ColumnSpan="3" MaxLength="10" Text="{Binding SelectedEmployee.StreetNumber, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}"/>
 
-        <TextBlock Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" Text="Postcode + gemeente"/>
+        <TextBlock Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" Text="Postcode + gemeente:"/>
         <TextBox Grid.Row="4" Grid.Column="6" Grid.ColumnSpan="3" MaxLength="10" Text="{Binding SelectedEmployee.Postcode, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}"/>
         <TextBox Grid.Row="4" Grid.Column="9" Grid.ColumnSpan="3" MaxLength="40" Text="{Binding SelectedEmployee.City, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}"/>
 
         <TextBlock Grid.Row="5" Grid.Column="3" Grid.ColumnSpan="2" Text="Emailadres:"/>
         <TextBox Grid.Row="5" Grid.Column="6" Grid.ColumnSpan="3" MaxLength="50" Text="{Binding SelectedEmployee.Email, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}"/>
 
-        <TextBlock Grid.Row="6" Grid.Column="3" Grid.ColumnSpan="2" Text="Telefoon"/>
+        <TextBlock Grid.Row="6" Grid.Column="3" Grid.ColumnSpan="2" Text="Telefoon:"/>
         <TextBox Grid.Row="6" Grid.Column="6" Grid.ColumnSpan="3" MaxLength="50" Text="{Binding SelectedEmployee.Phone, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}"/>
 
         <TextBlock Grid.Row="7" Grid.Column="3" Grid.ColumnSpan="6" Style="{StaticResource Melding}" Text="{Binding Error}"/>
